Fix color-contrast issues in Comparison/Survival page

--- a/src/globalStyles/header.scss
+++ b/src/globalStyles/header.scss
@@ -139,8 +139,8 @@ header {
 }
 
 #main-nav li a.selected {
-    color: #3786c2;
-    border-bottom: 2px solid #3786c2;
+    color: #2a6593;
+    border-bottom: 2px solid #2a6593;
     padding-bottom: 4px;
     text-decoration: none !important;
     cursor: text;
