--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -30,7 +30,7 @@ $greenSuccess: #11a747;
 
 $gutterWidth: 20px;
 
-$brand-primary: #3786c2;
+$brand-primary: #2f73a7;
 
 $borderColor: $mediumGrey;
 
